--- a/basic-vue/컴포넌트내부단방향.html
+++ b/basic-vue/컴포넌트내부단방향.html
@@ -9,13 +9,18 @@
   </head>
   <body>
     <div id="app">
-      <h2>{{ name }}</h2>
+      <button :value="isClick" @click="handleClick">{{ isClick }}</button>
     </div>
     <script>
       new Vue({
         el: "#app",
         data: {
-          name: "Ayaan",
+          isClick: false,
+        },
+        methods: {
+          handleClick(e) {
+            this.isClick = !e.target.value;
+          },
         },
       });
     </script>
